# coarse-to-fine

./: .env.example  .gitignore  .pre-commit-config.yaml  1  CLAUDE.md  Makefile  README.md  build_output_1174568.txt  c2f_exp_7721k2_u.yaml  c2f_exp_d_zo6a9s.yaml  c2f_exp_g11y0m_v.yaml  c2fgen.ipynb  checkpoints  debug.ipynb  finish_build.sh  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
batch_api_requests/: README.md  analyze_batch_cost.py  create_batch_api_request.py  get_dataset_statistics.py  monitor_batch_api_requests.py  submit_batch_api_request.py  upload_sft_dataset_to_hf.py
batch_api_requests/prompts/system_prompts/: latent-generation.txt
batch_api_requests/utils/: common_utils.py
config/: H100_joint_block.yaml  H100_joint_causal.yaml  H200.yaml  H200_joint_block.yaml  H200_joint_causal.yaml  H200_joint_causal_rpp_n1.yaml  default.yaml  latent_generation.yaml
config/experiments/: latent_generation.yaml  qwen3_4b_math.yaml
config/prompts/: generation.yaml  verification.yaml
notebooks/: c2fgen.ipynb  debug.ipynb
outputs/2026-02-21/19-58-13/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-02-21/19-59-48/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-02-21/20-05-51/.hydra/: config.yaml  hydra.yaml
outputs/2026-02-21/22-41-33/.hydra/: hydra.yaml  overrides.yaml
outputs/2026-02-21/22-44-05/.hydra/: hydra.yaml
outputs/2026-02-21/22-53-22/.hydra/: hydra.yaml  overrides.yaml
outputs/2026-02-21/22-56-52/.hydra/: config.yaml  hydra.yaml
outputs/2026-02-21/22-58-40/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-02-21/23-06-16/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-02-21/23-11-59/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-02-21/23-30-22/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-02-21/23-37-21/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-02-21/23-43-20/.hydra/: config.yaml  hydra.yaml  overrides.yaml
patches/: verl_5609_dp_fix.patch  vllm_dp_external_executor_fix.patch
prompts/few_shot_examples/: latent-generation.jsonl
prompts/user_prompts/: gemini-3-pro-7.txt
scripts/: 00_prepare_data.py  01_create_batch_requests.py  02_submit_batch.py  03_verify_outputs.py  04_sft_train.py  05_generate_local.py  06_train_decoder.py  06b_train_ar_baseline.py  06c_train_diffusion_baseline.py  07_rl_train.py  08_eval_joint.py  09_eval_nll.py  parse_rl_sweep.py  patch_verl.sh  slurm_00_prepare_data.sh  slurm_01_batch_create.sh  slurm_02_batch_submit.sh  slurm_04_sft.sh  slurm_05_generate.sh  slurm_06_pretrain.sh  slurm_06b_ar_baseline.sh  slurm_06c_diffusion_baseline.sh  slurm_07_rl.sh  sweep_07_rl_throughput.sh  sweep_07_rl_throughput_v3.sh  sweep_07_rl_throughput_v4.sh
src/: __init__.py  config.py
src/batch/: __init__.py  client.py  cost.py  requests.py  submit.py
src/c2f_model/: README.md  __init__.py  configuration.py  modeling.py
src/c2f_model/training/: __init__.py  dataset.py  diffusion.py  tokenizer.py  train.py
src/c2f_training/: __init__.py  dataset.py  tokenizer.py  train.py
src/common/: __init__.py  constants.py  env.py  logging.py  paths.py
src/data/: __init__.py  preprocessing.py  registry.py  schemas.py
src/eval/: __init__.py  ar.py  bound.py  c2f.py  common.py  diffusion.py  q_sampler.py
src/generation/: __init__.py  dataset.py  inference.py
src/qwen3_joint/: README.md  __init__.py  configuration.py  modeling.py
src/rl/: README.md  __init__.py  common.py  joint_launcher.py  main_ppo_with_elbo.py  phase_c2f_finetune.py  phase_joint.py  phase_sft_rl.py  reward.py  reward_joint.py  reward_sft.py  train.py  verl_config.py
src/sft/: __init__.py  dataset.py  train.py
src/utils/: env.py
src/verification/: __init__.py  rule_based.py  verifier.py
tests/: test_block_mode_leak.py  test_config.py  test_dataset.py  test_diffusion.py  test_eval_batching.py  test_eval_bound.py  test_eval_comparability_tags.py  test_eval_iwae_k.py  test_reward_common.py  test_reward_joint_batcher.py  test_verification.py
