[project]
name = "coarse-to-fine"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "cmake>=4.2.1",
    "datasets>=4.5.0",
    "flash-attn>=2.8.3",
    "ipykernel>=7.2.0",
    "liger-kernel>=0.7.0",
    "ninja>=1.13.0",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "qwen-vl-utils>=0.0.14",
    "ray>=2.54.0",
    "setuptools>=80.10.2",
    "setuptools-scm>=9.2.2",
    "torchrun>=0.2.9",
    "torch>=2.8.0,<2.9",
    "torchvision>=0.24.1",
    "transformers>=4.57.6",
    "verl>=0.7.0",
    "vllm>=0.14.0",
    "wheel>=0.46.3",
]

[project.optional-dependencies]
# SFT with veRL: pip install -e ".[sft]" (requires CUDA and veRL-compatible env)
sft = [
    "verl>=0.7.0",
]
# Step 5: Local generation with vLLM
generation = [
    "vllm>=0.8.0",
]
# Step 6: C2F model pretraining with HF Trainer + FSDP
c2f = [
    "transformers>=4.52.0",
    "accelerate>=1.7.0",
    "torch>=2.6.0",
    "wandb",
]
