[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coarse-to-fine"
version = "0.1.0"
description = "Hierarchical latent generation for language models (coarse-to-fine ELBO training)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Andrew Xu", email = "andrew.xu@yale.edu" }]
# Base deps are CPU-installable. GPU-only packages (flash-attn, vllm, verl,
# liger-kernel) live under the per-step extras so CPU CI (`uv sync --extra dev`)
# does not try to build CUDA wheels. flash-attn in particular imports torch at
# build time without declaring it — under PEP 517 build isolation the build env
# has no torch and the install fails.
dependencies = [
    "cmake>=4.2.1",
    "datasets>=4.5.0",
    "ipykernel>=7.2.0",
    "ninja>=1.13.0",
    "openai>=1.0",
    "pre-commit>=4.5.1",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "qwen-vl-utils>=0.0.14",
    "ray>=2.54.0",
    "setuptools>=80.10.2",
    "setuptools-scm>=9.2.2",
    "transformers>=4.57.6",
    "wheel>=0.46.3",
]

[project.optional-dependencies]
# Step 4 — SFT q_φ with HuggingFace Trainer (no veRL).
sft = [
    "accelerate>=1.7.0",
    "torch>=2.6.0",
]
# Step 5 — local generation with vLLM. vLLM bundles its own flash-attention
# kernels, so a separate flash-attn install is not required here.
# 0.12.0 is the upper bound of verl 0.7.0's declared range and the only version
# where verl's ExternalZeroMQDistributedExecutor.execute_model is defined (the
# override is gated on _VLLM_VERSION >= 0.12.0 in verl/workers/rollout/
# vllm_rollout/vllm_async_server.py). Async rollout silently breaks on <0.12.0.
generation = [
    "vllm==0.12.0",
]
# Step 6 — C2F model pretraining with HF Trainer + FSDP.
# liger-kernel is currently unused (the `use_liger` config flag is not wired
# through), but kept here so turning it on is a one-line change.
c2f = [
    "accelerate>=1.7.0",
    "torch>=2.6.0",
    "wandb",
    "liger-kernel>=0.7.0",
]
# Step 7 — RL training with veRL. flash-attn is a soft dep for veRL's FSDP
# actor/rollout; install with `--no-build-isolation` after torch is present
# (flash-attn imports torch at build time without declaring it).
rl = [
    "verl>=0.7.0",
    "flash-attn>=2.8.3",
]
# Development tooling (lint, format, test). CPU-only; safe to install anywhere.
# torch is needed for the unit-test suite (test_reward_common builds tensors).
dev = [
    "ruff>=0.7",
    "pytest>=8",
    "pytest-cov>=5",
    "pre-commit>=3.8",
    "nbstripout>=0.7",
    "torch>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ── Linting & formatting ──────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    ".venv",
    "checkpoints",
    "data",
    "wandb",
    "notebooks",
]

[tool.ruff.lint]
# Pragmatic research-code ruleset. Catches real bugs and readability issues
# without stylistic micromanagement.
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes (unused imports, undefined names)
    "I",        # isort
    "B",        # flake8-bugbear
    "UP",       # pyupgrade (use modern Python idioms)
    "SIM",      # flake8-simplify
    "RUF",      # ruff-specific
    "PTH",      # flake8-use-pathlib
    "PLR",      # pylint-refactor (magic numbers, too-many-*)
]
ignore = [
    "E501",     # line length — handled by formatter
    "PLR0913",  # too many arguments — research code has wide signatures
    "PLR2004",  # magic numbers — too noisy outside tests
    "B008",     # function call in default arg — Field(default_factory=...) is fine
    "SIM108",   # ternary vs if/else — readability call
    "RUF002",   # ambiguous unicode in docstring — we use ×, –, ℓ for math
    "RUF003",   # ambiguous unicode in comments — same rationale
    "B905",     # zip() without strict — will be revisited in later phases
    # pathlib migration is a separate polish concern; leave os.path as-is for now
    "PTH103", "PTH110", "PTH118", "PTH123",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "S101", "F401"]            # unused imports fine in test stubs
"scripts/*" = ["E402", "PLR0911", "PLR0912", "PLR0915"]  # sys.path bootstrap + long main()
"src/c2f_model/modeling.py" = ["PLR0912", "PLR0915"]    # forked model code
"src/rl/*" = ["PLR0912", "PLR0915"]                # reward / phase code is unavoidably branchy
"src/sft/train.py" = ["PLR0915"]                   # HF Trainer setup is linear and long
"src/eval/c2f.py" = ["PLR0915"]                    # eval loop is unavoidably linear
"src/verification/verifier.py" = ["PLR0911"]       # validation cascade with multiple early returns

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

# ── Testing ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = ["-q", "--strict-markers", "--strict-config"]
filterwarnings = [
    "ignore::DeprecationWarning:transformers.*",
    "ignore::DeprecationWarning:datasets.*",
    "ignore::FutureWarning:torch.*",
]

[tool.coverage.run]
source = ["src"]
omit = ["src/c2f_model/modeling.py"]  # forked model code; coverage not meaningful
